[package]
name = "boxing-arena"
version = "0.9.3"
authors = ["Dan Aloni <alonid@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
description = "Simple reuse of Box allocation"
homepage = "https://github.com/da-x/boxing-arena"
repository = "https://github.com/da-x/boxing-arena"
keywords = ["arena", "box", "allocations"]
categories = ["memory-management"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
